Fix svg alignment issue in Windows Firefox

--- a/src/stylus/portfolio.styl
+++ b/src/stylus/portfolio.styl
@@ -58,65 +58,39 @@ padding-bottom__portfolio-slides = 4.25rem
     height 100%
 
 .portfolio-gallery__device
-    display inline-block
-    position relative
+    // display inline-block
+    position absolute
+    width 100%
+    height auto
     margin 0
     z-index 0
-    height 100%
     
     &:focus-within
         .portfolio-gallery__device-overlay
             stroke: colorA
 
     &--00
-        position absolute
         width 23.17%
-        height auto
         left 0
         bottom 0
         z-index 10
 
-        .portfolio-gallery__device-overlay
-            width 100%
-
     &--01
-        position absolute
         width 84.80%
-        height auto
         left 15.20%
         bottom 0
 
-        .portfolio-gallery__device-overlay
-            width 100%
-
     &--02
-        position absolute
-        width 100%
         left 0
         top 0
 
-        .portfolio-gallery__device-overlay
-            width 100%
+    &--03
+        left 0
+        top 0
 
-    // &--03
-    //     width 74.61%
-    //     left 0
-    //     top 45.55%
-
-    // &--04
-    //     width 36.65%
-    //     left 63.35%
-    //     top 10.77%
-
-    // &--05
-    //     width 100%
-    //     left 0
-    //     top 0
-    
-    // &--06
-    //     width 100%
-    //     left 0
-    //     top 64.12%
+    &--06
+        left 0
+        top 0
 
 .portfolio-gallery__device-overlay
     display block
@@ -124,9 +98,8 @@ padding-bottom__portfolio-slides = 4.25rem
     overflow visible
     z-index 20
     pointer-events none
-    // width 100%
-    height 100%
-    width auto
+    width 100%
+    height auto
     
     fill color0
     stroke color8
